improve usability by flipping the order of title elements around, so that you don't get ten tabs each saying "Flux..."

--- a/hosts/templates/hosts/domains.html
+++ b/hosts/templates/hosts/domains.html
@@ -3,7 +3,7 @@
 {% load mptt_tags %}
 {% load display_extras %}
 {% load monitoring_extras %}
-{% block title %}Fluxmon &mdash; Domains{% endblock %}
+{% block title %}Domains &mdash; Fluxmon{% endblock %}
 {% block content %}
 <ul class="children">
   {% recursetree nodes %}
