--- a/hosts/templates/hosts/host.html
+++ b/hosts/templates/hosts/host.html
@@ -2,7 +2,7 @@
 {# kate: space-indent on; indent-width 2; replace-tabs on; hl Django HTML Template; #}
 {% load display_extras %}
 {% load monitoring_extras %}
-{% block title %}Fluxmon &mdash; {{ host|display:"fqdn" }}{% endblock %}
+{% block title %}{{ host|display:"fqdn" }} &mdash; Fluxmon{% endblock %}
 {% block content %}
 <ol class="breadcrumb">
   <li><a href="{% url 'hosts.views.domains' %}">Hosts</a></li>
