--- a/hosts/templates/hosts/hostdelete.html
+++ b/hosts/templates/hosts/hostdelete.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {# kate: space-indent on; indent-width 2; replace-tabs on; hl Django HTML Template; #}
 {% load display_extras %}
-{% block title %}Fluxmon &mdash; {{ host|display:"fqdn" }}{% endblock %}
+{% block title %}{{ host|display:"fqdn" }} &mdash; Fluxmon{% endblock %}
 {% block content %}
 <ol class="breadcrumb">
   <li><a href="{% url 'hosts.views.domains' %}">Hosts</a></li>
