--- a/monitoring/templates/monitoring/checkdetails.html
+++ b/monitoring/templates/monitoring/checkdetails.html
@@ -2,7 +2,7 @@
 {% load display_extras %}
 {% load monitoring_extras %}
 {# kate: space-indent on; indent-width 2; replace-tabs on; hl Django HTML Template; #}
-{% block title %}Fluxmon &mdash; {{ check.target_host|display:"fqdn" }} &mdash; {% for checkparam in check.checkparameter_set.all %}{{ checkparam.parameter|display }}: {{ checkparam.value }}{% endfor %}{% endblock %}
+{% block title %}{% for checkparam in check.checkparameter_set.all %}{{ checkparam.parameter|display }}: {{ checkparam.value }} &mdash; {{ check.target_host|display:"fqdn" }} &mdash; Fluxmon{% endfor %}{% endblock %}
 {% block content %}
 <ol class="breadcrumb">
   <li><a href="{% url 'hosts.views.domains' %}">Hosts</a></li>
