--- a/monitoring/templates/monitoring/graph.html
+++ b/monitoring/templates/monitoring/graph.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% load display_extras %}
 {# kate: space-indent on; indent-width 2; replace-tabs on; hl Django HTML Template; #}
-{% block title %}Fluxmon &mdash; {{ check.target_host|display:"fqdn" }} &mdash; {% for checkparam in check.checkparameter_set.all %}{{ checkparam.parameter|display }}: {{ checkparam.value }} {% endfor %} &mdash; {{ variable|display }}{% endblock %}
+{% block title %}{{ variable|display }} &mdash; {% for checkparam in check.checkparameter_set.all %}{{ checkparam.parameter|display }}: {{ checkparam.value }} {% endfor %} &mdash; {{ check.target_host|display:"fqdn" }} &mdash; Fluxmon{% endblock %}
 {% block content %}
-<div>
+<div class="hidden-xs">
   <ol class="breadcrumb">
     <li><a href="{% url 'hosts.views.domains' %}">Hosts</a></li>
     <li>
