--- a/monitoring/templates/monitoring/search.html
+++ b/monitoring/templates/monitoring/search.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {# kate: space-indent on; indent-width 2; replace-tabs on; hl Django HTML Template; #}
-{% block title %}Fluxmon &mdash; Search{% endblock %}
+{% block title %}Search &mdash; Fluxmon{% endblock %}
 {% block content %}
   {% include "monitoring/searchform.inc.html" %}
   {% if have_query %}
