--- a/monitoring/templates/monitoring/graph.html
+++ b/monitoring/templates/monitoring/graph.html
@@ -3,15 +3,17 @@
 {# kate: space-indent on; indent-width 2; replace-tabs on; hl Django HTML Template; #}
 {% block title %}{{ variable|display }} &mdash; {% for checkparam in check.checkparameter_set.all %}{{ checkparam.parameter|display }}: {{ checkparam.value }} {% endfor %} &mdash; {{ check.target_host|display:"fqdn" }} &mdash; Fluxmon{% endblock %}
 {% block content %}
-<div class="hidden-xs">
+<div>
   <ol class="breadcrumb">
-    <li><a href="{% url 'hosts.views.domains' %}">Hosts</a></li>
-    <li>
+    <li class="hidden-xs"><a href="{% url 'hosts.views.domains' %}">Hosts</a></li>
+    <li class="visible-xs-block visible-sm-inline visible-md-inline visible-lg-inline">
       <a href="{% url 'hosts.views.host' check.target_host.fqdn %}">{{ check.target_host|display:"fqdn" }}</a>
       {% if check.target_host != check.exec_host %}(as seen by <a href="{% url 'hosts.views.host' check.exec_host.fqdn %}">{{ check.exec_host|display:"fqdn" }}</a>){% endif %}
     </li>
-    <li><a href="{% url 'monitoring.views.check_details' check.uuid %}">{{ check|display:"uuid" }}</a></li>
-    <li class="active">{{ variable|display }}</li>
+    <li class="visible-xs-block visible-sm-inline visible-md-inline visible-lg-inline">
+      <a href="{% url 'monitoring.views.check_details' check.uuid %}">{{ check|display:"uuid" }}</a>
+    </li>
+    <li class="hidden-xs active">{{ variable|display }}</li>
   </ol>
 </div>
 <div class="hidden-xs">
