install jquery, angular and bootstrap through bower

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,11 +5,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport"     content="width=device-width, initial-scale=1.0" />
     <link rel='stylesheet'    href='http://fonts.googleapis.com/css?family=PT+Sans' type='text/css'>
-    <link rel="stylesheet"    href="//netdna.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="stylesheet"    href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet"    href="/static/base.css">
     <link rel="stylesheet"    href="/static/bootstrap_footer.css">
-    <script type="text/javascript" src="/jquery/jquery.min.js"></script>
-    <script type="text/javascript" src="/angular.js/angular.min.js"></script>
+    <script type="text/javascript" src="/static/bower_components/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="/static/bower_components/angularjs/angular.min.js"></script>
     <script type="text/javascript" src="/static/ng.app.js"></script>
     <script type="text/javascript" src="/static/ng.zoomable.js"></script>
   </head>
@@ -77,7 +77,7 @@
       </div>
     </div>
 
-    <script src="//netdna.bootstrapcdn.com/bootstrap/latest/js/bootstrap.min.js"></script>
+    <script src="/static/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/static/display/display.js"></script>
   </body>
 </html>
