--- a/hosts/templates/hosts/domains.html
+++ b/hosts/templates/hosts/domains.html
@@ -9,8 +9,9 @@
   {% recursetree nodes %}
     {% if not node.is_root_node %}
       <li>
-        {{ node }} {% if node.host_set.count %} ({{ node.host_set.count }} Host{{ node.host_set.count|pluralize }})
+        {{ node }} ({{ node.host_set.count }} Host{{ node.host_set.count|pluralize }})
         (<a href="{% url 'hosts.views.add_host' node.id %}">+</a>)
+        {% if node.host_set.count %}
           <ul>
             {% for host in node.get_hosts %}
               {% ifperm "r" on host %}
