add trello board link

--- a/templates/index.html
+++ b/templates/index.html
@@ -157,6 +157,7 @@
   <div class="col-md-9" style="border-top: 1px solid gray; padding-top: 40px">
     <p>Development is still under way, so unfortunately, there is not much to be seen here yet.</p>
     <p>Contact Svedrin in the Freenode IRC network if you'd like to get in touch.</p>
+    <p>There's a <a href="https://trello.com/b/y9slyrds/fluxmon">Trello board</a> where I keep track of ideas.</p>
     <p>Also, check out <a href="http://blog.svedr.in/posts/why-i-started-working-on-fluxmon.html">my blog post on what I'm doing here</a>.</p>
   </div>
 </div>
