--- a/monitoring/templates/profile.html
+++ b/monitoring/templates/profile.html
@@ -4,101 +4,69 @@
 {% load gravatar_extras %}
 {% load monitoring_extras %}
 {% block content %}
-<h2>Hi {{ user.username }}!</h2>
 <div class="panel panel-default">
-  <div class="panel-body">
-  <ul class="nav nav-tabs">
-    <li class="active"><a href="#profile" data-toggle="tab">Profile</a></li>
-    <li><a href="#alerts" data-toggle="tab">Alerts</a></li>
-    <li><a href="#outdated" data-toggle="tab">Outdated</a></li>
-  </ul>
-
-  <div class="tab-content">
-    <div class="tab-pane active" id="profile">
-      <div class="panel panel-default">
-        <div class="panel-body">
-          <div class="row">
-            <div class="col-md-2">{% gravatar user %}</div>
-            <div class="col-md-8">
-              {% if user.first_name and user.last_name %}
-                <h1 class="panel-title">{{ user.first_name }} {{ user.last_name }}</h1>
-              {% endif %}
-              <dl class="dl-horizontal">
-                <dt>Joined:</dt>
-                <dd>{{ user.date_joined }}</dd>
-                <dt>Last login:</dt>
-                <dd>{{ user.last_login }}</dd>
-                {% if user.is_staff or user.is_superuser %}
-                  <dt>Special privileges:</dt>
-                  <dd>
-                    {% if user.is_staff %}Staff{% endif %}
-                    {% if user.is_superuser %}Superuser{% endif %}
-                  </dd>
-                {% endif %}
-              </dl>
-              <h1 class="panel-title">Roles:</h1>
-              <ul>
-                {% for role in user.role_set.all %}
-                  <li>{{ role }}</li>
-                {% endfor %}
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="tab-pane" id="alerts">
-      {% if currentalerts.count %}
-      <div class="alert alert-warning">
-        <strong>The following checks are currently in a bad mood:</strong>
-        <table class="table table-hover">
-          <thead>
-            <tr>
-              <th>Host</th>
-              <th>Check Label</th>
-              <th>Sensor</th>
-              <th>Parameters</th>
-              <th>Failing since</th>
-              <th>Failure count</th>
-              <th> </th>
-            </tr>
-          </thead>
-          <tbody>
-          {% for alert in currentalerts %}
-            {% ifperm "r" on alert.check_inst %}
-              <tr onclick="window.location='{% url 'monitoring.views.check_details' alert.check_inst.uuid %}';">
-                <td>
-                  {{ alert.check_inst.target_host }}
-                  {% if alert.check_inst.target_host != alert.check_inst.exec_host %}(as seen by {{ alert.check_inst.exec_host }}){% endif %}
-                </td>
-                <td>{{ alert.check_inst|displayonly }}</td>
-                <td>{{ alert.check_inst.sensor }}</td>
-                <td>{{ alert.check_inst.paramstring }}</td>
-                <td><span title="{{ alert.starttime }}">{{ alert.starttime|timesince }}</a></td>
-                <td>{{ alert.failcount }}</td>
-                <td><a href="{% url 'monitoring.views.check_details' alert.check_inst.uuid %}" title="View details" style="text-decoration: none">→</a></td>
-              </tr>
-            {% endifperm %}
-          {% endfor %}
-          </tbody>
-        </table>
-      </div>
-      {% else %}
-      <div class="alert alert-success">There's currently nothing to worry about.</div>
-      {% endif %}
-    </div>
-
-    <div class="tab-pane" id="outdated">
-      {% if outdatedchecks.count %}
-      <div class="alert alert-info">
-        <strong>We haven't heard about these checks for a while:</strong>
-        {% include "monitoring/listchecks.inc.html" with list_checks=outdatedchecks %}
-      </div>
-      {% endif %}
-    </div>
+  <div class="panel-heading">
+    {% if user.first_name and user.last_name %}
+      {{ user.first_name }} &ldquo;{{ user.username }}&rdquo; {{ user.last_name }}
+    {% else %}
+      {{ user.username }}
+    {% endif %}
   </div>
+  <div class="panel-body">
+    <div class="row">
+      <div class="col-md-2">{% gravatar user %}</div>
+      <div class="col-md-8">
+        <dl class="dl-horizontal">
+          <dt>Joined:</dt>
+          <dd>{{ user.date_joined }}</dd>
+          <dt>Last login:</dt>
+          <dd>{{ user.last_login }}</dd>
+          {% if user.is_staff or user.is_superuser %}
+            <dt>Special privileges:</dt>
+            <dd>
+              {% if user.is_staff %}Staff{% endif %}
+              {% if user.is_superuser %}Superuser{% endif %}
+            </dd>
+          {% endif %}
+        </dl>
+        <h1 class="panel-title">Roles:</h1>
+        <ul>
+          {% for role in user.role_set.all %}
+            <li>{{ role }}</li>
+          {% endfor %}
+        </ul>
+      </div>
+    </div>
   </div>
 </div>
+<div class="panel panel-default">
+  <div class="panel-heading">Most viewed graphs</div>
+  <div class="panel-body">
+    <table class="table table-hover">
+      <tbody>
+      {% for counter in most_viewed %}
+        <tr targetlink="{% url 'monitoring.views.render_check_page' counter.check_inst.uuid counter.variable.name %}" class="checktr">
+          <td>
+            {{ counter.check_inst.target_host|display:"fqdn" }} / {{ counter.check_inst|display:"uuid" }} / {{ counter.variable|display }}
+          </td>
+          <td><a href="{% url 'monitoring.views.render_check_page' counter.check_inst.uuid counter.variable.name %}" title="View graph" style="text-decoration: none">→</a></td>
+        </tr>
+      {% endfor %}
+      </tbody>
+    </table>
+  </div>
+</div>
+<script type="text/javascript">
+$(".checktr").click(function(ev){
+  ev.preventDefault();
+  ev.stopPropagation();
+  if(ev.ctrlKey){
+    window.open(this.attributes.targetlink.value);
+  }
+  else{
+    window.location = this.attributes.targetlink.value;
+  }
+});
+</script>
 
 {% endblock %}
