--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,12 @@
     <link rel="stylesheet"    href="/static/bootstrap_footer.css">
     <script type="text/javascript" src="/static/bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="/static/bower_components/angularjs/angular.min.js"></script>
+    <script type="text/javascript" src="/static/bower_components/jquery-flot/jquery.flot.js"></script>
+    <script type="text/javascript" src="/static/bower_components/jquery-flot/jquery.flot.time.js"></script>
+    <script type="text/javascript" src="/static/bower_components/angular-flot/angular-flot.js"></script>
     <script type="text/javascript" src="/static/ng.app.js"></script>
     <script type="text/javascript" src="/static/ng.zoomable.js"></script>
+    <script type="text/javascript" src="/static/interactiveGraphCtrl.js"></script>
   </head>
   <body>
     <div id="wrap">
