--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,6 @@
     <link rel='stylesheet'    href='http://fonts.googleapis.com/css?family=PT+Sans' type='text/css'>
     <link rel="stylesheet"    href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet"    href="/static/base.css">
-    <link rel="stylesheet"    href="/static/bootstrap_footer.css">
     <script type="text/javascript" src="/static/bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="/static/bower_components/angularjs/angular.min.js"></script>
     <script type="text/javascript" src="/static/bower_components/jquery-flot/jquery.flot.js"></script>
@@ -18,62 +17,59 @@
     <script type="text/javascript" src="/static/interactiveGraphCtrl.js"></script>
   </head>
   <body>
-    <div id="wrap">
-      <!-- Fixed navbar -->
-      <div class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">Fluxmon</a>
-          </div>
-          <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-              <li><a href="/">Home</a></li>
-              {% if not user.is_anonymous %}
-              <li><a href="{% url 'monitoring.views.profile' %}">{{ user }}</a></li>
-              <li><a href="{% url 'hosts.views.domains' %}">Hosts</a></li>
-              <li><a href="{% url 'monitoring.views.search' %}" id="searchlink">Search</a></li>
-              <li><a href="{% url 'django.contrib.auth.views.logout' %}">Logout</a></li>
-              <script type="text/javascript">
-                $(function(){
-                  $("#searchlink").popover({
-                    trigger: "manual",
-                    title: "Search",
-                    content: '<form action="{% url 'monitoring.views.search' %}"><input type="text" class="form-control" id="searchinput" name="query" placeholder="Query" style="width: 250px" /></form>',
-                    placement: "bottom",
-                    html: true
-                  });
-                  $("#searchlink").on("shown.bs.popover", function(){
-                    $("#searchinput").focus();
-                    $("#searchinput").blur(function(){
-                      $("#searchlink").popover('hide');
-                    });
-                  });
-                  $("#searchlink").click(function(ev){
-                    ev.preventDefault();
-                    $(this).popover('toggle');
+    <div class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">Fluxmon</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="/">Home</a></li>
+            {% if not user.is_anonymous %}
+            <li><a href="{% url 'monitoring.views.profile' %}">{{ user }}</a></li>
+            <li><a href="{% url 'hosts.views.domains' %}">Hosts</a></li>
+            <li><a href="{% url 'monitoring.views.search' %}" id="searchlink">Search</a></li>
+            <li><a href="{% url 'django.contrib.auth.views.logout' %}">Logout</a></li>
+            <script type="text/javascript">
+              $(function(){
+                $("#searchlink").popover({
+                  trigger: "manual",
+                  title: "Search",
+                  content: '<form action="{% url 'monitoring.views.search' %}"><input type="text" class="form-control" id="searchinput" name="query" placeholder="Query" style="width: 250px" /></form>',
+                  placement: "bottom",
+                  html: true
+                });
+                $("#searchlink").on("shown.bs.popover", function(){
+                  $("#searchinput").focus();
+                  $("#searchinput").blur(function(){
+                    $("#searchlink").popover('hide');
                   });
                 });
-              </script>
-              {% elif user.is_authenticated %}
-              <li><a href="{% url 'django.contrib.auth.views.login' %}">Guest</a></li>
-              {% else %}
-              <li><a href="{% url 'django.contrib.auth.views.login' %}">Login</a></li>
-              {% endif %}
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
+                $("#searchlink").click(function(ev){
+                  ev.preventDefault();
+                  $(this).popover('toggle');
+                });
+              });
+            </script>
+            {% elif user.is_authenticated %}
+            <li><a href="{% url 'django.contrib.auth.views.login' %}">Guest</a></li>
+            {% else %}
+            <li><a href="{% url 'django.contrib.auth.views.login' %}">Login</a></li>
+            {% endif %}
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
+    </div>
 
-      <!-- Begin page content -->
-      <div class="container">
-        {% block content %}
-        {% endblock %}
-      </div>
+    <!-- Begin page content -->
+    <div class="container">
+      {% block content %}
+      {% endblock %}
     </div>
 
     <div id="footer">
