add hammerjs to recognize people trying to pinch-zoom the flot graphs

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,10 +3,11 @@
   <head>
     <title>{% block title %}Fluxmon{% endblock %}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport"     content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport"     content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <link rel='stylesheet'    href='http://fonts.googleapis.com/css?family=PT+Sans' type='text/css'>
     <link rel="stylesheet"    href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet"    href="/static/base.css">
+    <script type="text/javascript" src="/static/bower_components/hammerjs/hammer.min.js"></script>
     <script type="text/javascript" src="/static/bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="/static/bower_components/angularjs/angular.min.js"></script>
     <script type="text/javascript" src="/static/bower_components/jquery-flot/jquery.flot.js"></script>
