--- a/monitoring/templates/monitoring/interactive_graph.html
+++ b/monitoring/templates/monitoring/interactive_graph.html
@@ -34,7 +34,7 @@
        ng-click="set_active_profile(profile)">{[ profile.title ]}</a>
   </div>
   <div>
-    <flot dataset="chartData" options="chartOptions" height="300px"></flot>
+    <flot dataset="chartData" options="chartOptions" height="300px" zoom></flot>
   </div>
 </div>
 {% endblock %}
