--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="/static/bower_components/jquery-flot/jquery.flot.js"></script>
     <script type="text/javascript" src="/static/bower_components/jquery-flot/jquery.flot.time.js"></script>
     <script type="text/javascript" src="/static/bower_components/jquery-flot/jquery.flot.selection.js"></script>
+    <script type="text/javascript" src="/static/bower_components/jquery-flot/jquery.flot.resize.js"></script>
     <script type="text/javascript" src="/static/bower_components/angular-flot/angular-flot.js"></script>
     <script type="text/javascript" src="/static/ng.app.js"></script>
     <script type="text/javascript" src="/static/ng.zoomable.js"></script>
