--- a/monitoring/templates/monitoring/interactive_graph.html
+++ b/monitoring/templates/monitoring/interactive_graph.html
@@ -21,6 +21,30 @@
 </div>
 <h3>{{ variable|display }}</h3>
 <div class="container col-xs-12 col-sm-12 col-md-12 col-lg-12 no-padding">
-    <interactive-graph check="{{ check.uuid }}" variable="{{ variable.name }}" variable-display="{{ variable.display }}" variable-unit="{{ variable.unit }}" ></interactive-graph>
+    <interactive-graph check="{{ check.uuid }}" variable="{{ variable.name }}" variable-display="{{ variable.display }}" variable-unit="{{ variable.unit }}" graph-state="graphstate" ></interactive-graph>
+    <table class="table">
+        <thead>
+            <tr>
+                <th> </th>
+                <th>Cur</th>
+                <th>Min</th>
+                <th>Avg</th>
+                <th>Max</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>{{ variable.display }}</td>
+                <td>{[ graphstate.last | number:2 ]}</td>
+                <td>{[ graphstate.min  | number:2 ]}</td>
+                <td>{[ graphstate.avg  | number:2 ]}</td>
+                <td>{[ graphstate.max  | number:2 ]}</td>
+            </tr>
+        </tbody>
+    </table>
+    <dl class="dl-horizontal">
+        <dt>Start:</dt><dd>{[ graphstate.start | date:'medium' ]} ({[ graphstate.data_start | date:'medium' ]})</dd>
+        <dt>End:  </dt><dd>{[ graphstate.end   | date:'medium' ]} ({[ graphstate.data_end   | date:'medium' ]})</dd>
+    </dl>
 </div>
 {% endblock %}
