display 95th percentile in the table and threshold the graph between 5th and 95th

--- a/monitoring/templates/monitoring/interactive_graph.html
+++ b/monitoring/templates/monitoring/interactive_graph.html
@@ -30,6 +30,7 @@
         <th>Min</th>
         <th>Avg</th>
         <th>Max</th>
+        <th>95%l</th>
       </tr>
     </thead>
     <tbody>
@@ -39,6 +40,7 @@
         <td>{[ graphstate.min  | number:2 ]}</td>
         <td>{[ graphstate.avg  | number:2 ]}</td>
         <td>{[ graphstate.max  | number:2 ]}</td>
+        <td>{[ graphstate.p95  | number:2 ]}</td>
       </tr>
     </tbody>
   </table>
