--- a/templates/base.html
+++ b/templates/base.html
@@ -14,10 +14,12 @@
     <script type="text/javascript" src="/static/bower_components/jquery-flot/jquery.flot.time.js"></script>
     <script type="text/javascript" src="/static/bower_components/jquery-flot/jquery.flot.selection.js"></script>
     <script type="text/javascript" src="/static/bower_components/jquery-flot/jquery.flot.resize.js"></script>
+    <script type="text/javascript" src="/static/bower_components/jquery-flot/jquery.flot.threshold.js"></script>
     <script type="text/javascript" src="/static/bower_components/angular-flot/angular-flot.js"></script>
     <script type="text/javascript" src="/static/ng.app.js"></script>
     <script type="text/javascript" src="/static/ng.zoomable.js"></script>
     <script type="text/javascript" src="/static/interactiveGraphCtrl.js"></script>
+    <script type="text/javascript" src="/static/statistics.js"></script>
   </head>
   <body>
     <div class="navbar navbar-default navbar-static-top">
