--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
       <div class="carousel-inner">
         <div class="item active" style="background: rgba(0, 0, 0, 0.5); min-height: 385px; padding-top: 10px;">
           <center>
-          <img src="http://fluxmon.de/render/76b4d61b-53c8-41df-b490-cf9f41f302c3/pac.png?token=a9aabfe9-7f92-4946-8ad1-25b5be8a064d&amp;width=553" alt="AC Power" />
+          <img src="/render/76b4d61b-53c8-41df-b490-cf9f41f302c3/pac.png?token=a9aabfe9-7f92-4946-8ad1-25b5be8a064d&amp;width=553" alt="AC Power" />
           </center>
           <div class="carousel-caption">
             A simple measurement and prediction
@@ -43,7 +43,7 @@
 
         <div class="item" style="background: rgba(0, 0, 0, 0.5); min-height: 385px; padding-top: 10px;">
           <center>
-          <img src="http://fluxmon.de/render/76b4d61b-53c8-41df-b490-cf9f41f302c3/etoday.png?token=a9aabfe9-7f92-4946-8ad1-25b5be8a064d&amp;width=553" alt="Energy production" />
+          <img src="/render/76b4d61b-53c8-41df-b490-cf9f41f302c3/etoday.png?token=a9aabfe9-7f92-4946-8ad1-25b5be8a064d&amp;width=553" alt="Energy production" />
           </center>
           <div class="carousel-caption">
             trends are accounted for
@@ -52,7 +52,7 @@
 
         <div class="item" style="background: rgba(0, 0, 0, 0.5); min-height: 385px; padding-top: 10px;">
           <center>
-          <img src="http://fluxmon.de/render/205847de-05ff-4f89-8c58-617899ef3300/tx_packetsize.png?token=a9aabfe9-7f92-4946-8ad1-25b5be8a064d&amp;width=553" alt="TX Packetsize" />
+          <img src="/render/205847de-05ff-4f89-8c58-617899ef3300/tx_packetsize.png?token=a9aabfe9-7f92-4946-8ad1-25b5be8a064d&amp;width=553" alt="TX Packetsize" />
           </center>
           <div class="carousel-caption">
             doing calculations
@@ -61,7 +61,7 @@
 
         <div class="item" style="background: rgba(0, 0, 0, 0.5); min-height: 385px; padding-top: 10px;">
           <center>
-          <img src="http://fluxmon.de/render/205847de-05ff-4f89-8c58-617899ef3300/packetsize.png?token=a9aabfe9-7f92-4946-8ad1-25b5be8a064d&amp;width=553" alt="RX+TX Packetsize" />
+          <img src="/render/205847de-05ff-4f89-8c58-617899ef3300/packetsize.png?token=a9aabfe9-7f92-4946-8ad1-25b5be8a064d&amp;width=553" alt="RX+TX Packetsize" />
           </center>
           <div class="carousel-caption">
             correlating results
