return parameter names instead of IDs and display them like we used to

--- a/static/templates/node-check.html
+++ b/static/templates/node-check.html
@@ -10,7 +10,7 @@
   <dt>Parameters:</dt>
   <dd>
     <ul class="list-unstyled">
-      <li ng-repeat="checkparam in check.checkparameter_set"><i>{[ checkparam.parameter ]}:</i> {[ checkparam.value ]}</li>
+      <li ng-repeat="checkparam in check.checkparameter_set">{[ checkparam.parameter ]} = {[ checkparam.value ]}</li>
     </ul>
   </dd>
   <dt>Last update:</dt>
