--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport"     content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <link rel='stylesheet'    href='https://fonts.googleapis.com/css?family=PT+Sans' type='text/css'>
     <link rel="stylesheet"    href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet"    href="/static/bower_components/angular-ui-tree/dist/angular-ui-tree.min.css">
     <link rel="stylesheet"    href="/static/base.css">
     <script type="text/javascript" src="/static/bower_components/hammerjs/hammer.min.js"></script>
     <script type="text/javascript" src="/static/bower_components/jquery/dist/jquery.min.js"></script>
@@ -17,10 +18,12 @@
     <script type="text/javascript" src="/static/bower_components/jquery-flot/jquery.flot.resize.js"></script>
     <script type="text/javascript" src="/static/bower_components/jquery-flot/jquery.flot.threshold.js"></script>
     <script type="text/javascript" src="/static/bower_components/angular-flot/angular-flot.js"></script>
+    <script type="text/javascript" src="/static/bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>
     <script type="text/javascript" src="/static/ng.app.js"></script>
     <script type="text/javascript" src="/static/ng.zoomable.js"></script>
     <script type="text/javascript" src="/static/interactiveGraph.js"></script>
     <script type="text/javascript" src="/static/scripts/SearchCtrl.js"></script>
+    <script type="text/javascript" src="/static/scripts/DomainCtrl.js"></script>
     <script type="text/javascript" src="/static/scripts/NodeCtrl.js"></script>
     <script type="text/javascript" src="/static/scripts/NodeCheckCtrl.js"></script>
     <script type="text/javascript" src="/static/statistics.js"></script>
