add hosts to domain tree

--- a/static/templates/domain-tree.html
+++ b/static/templates/domain-tree.html
@@ -6,9 +6,12 @@
   <ol ui-tree-nodes="" ng-model="node.children">
     <li ng-repeat="node in node.children" ui-tree-node ng-include="'domain-tree-node.html'">
     </li>
+    <ol>
+        <li ng-repeat="host in node.hosts">{[ host.fqdn ]}</li>
+    </ol>
   </ol>
 </script>
-<div ui-tree>
+<div ui-tree data-drag-enabled="false">
   <ol ui-tree-nodes="" ng-model="tree" id="tree-root">
     <li ng-repeat="node in tree.children" ui-tree-node ng-include="'domain-tree-node.html'"></li>
   </ol>
