display node links and node count

--- a/static/templates/domain-tree.html
+++ b/static/templates/domain-tree.html
@@ -1,13 +1,15 @@
 <h1>Tree!</h1>
 <script type="text/ng-template" id="domain-tree-node.html">
   <div ui-tree-handle>
-    {[ node.fqdn ]}
+    {[ node.fqdn ]} ({[ node.hosts.length ]} Hosts)
   </div>
   <ol ui-tree-nodes="" ng-model="node.children">
     <li ng-repeat="node in node.children" ui-tree-node ng-include="'domain-tree-node.html'">
     </li>
     <ol>
-        <li ng-repeat="host in node.hosts">{[ host.fqdn ]}</li>
+        <li ng-repeat="host in node.hosts">
+            <a href="#" ui-sref="node.checklist({nodeId: host.id})">{[ host.fqdn ]}</a>
+        </li>
     </ol>
   </ol>
 </script>
