add domain aggregate view

--- a/static/templates/domain.html
+++ b/static/templates/domain.html
@@ -1,6 +1,6 @@
 <dl class="dl-horizontal">
   <dt>Domain:</dt>
-  <dd>{[ domain.fqdn ]}</dd>
+  <dd>{[ domain.name ]}</dd>
 </dl>
 
 <div ui-view></div>
