--- a/templates/base.html
+++ b/templates/base.html
@@ -45,29 +45,8 @@
             {% if not user.is_anonymous %}
             <li><a href="{% url 'monitoring.views.profile' %}">{{ user }}</a></li>
             <li><a href="#" ui-sref="tree">Hosts</a></li>
-            <li><a href="#" ui-sref="search" id="searchlink">Search</a></li>
+            <li><a href="#" ui-sref="search" searchbox>Search</a></li>
             <li><a href="{% url 'django.contrib.auth.views.logout' %}">Logout</a></li>
-            <script type="text/javascript">
-              $(function(){
-                $("#searchlink").popover({
-                  trigger: "manual",
-                  title: "Search",
-                  content: '<form action="{% url 'monitoring.views.search' %}"><input type="text" class="form-control" id="searchinput" name="query" placeholder="Query" style="width: 250px" /></form>',
-                  placement: "bottom",
-                  html: true
-                });
-                $("#searchlink").on("shown.bs.popover", function(){
-                  $("#searchinput").focus();
-                  $("#searchinput").blur(function(){
-                    $("#searchlink").popover('hide');
-                  });
-                });
-                $("#searchlink").click(function(ev){
-                  ev.preventDefault();
-                  $(this).popover('toggle');
-                });
-              });
-            </script>
             {% elif user.is_authenticated %}
             <li><a href="{% url 'django.contrib.auth.views.login' %}">Guest</a></li>
             {% else %}
