fix check var display stuff

--- a/static/templates/node-check-var.html
+++ b/static/templates/node-check-var.html
@@ -1,6 +1,6 @@
 <h3>{[ variable.display || variable.name ]}</h3>
 <div class="container col-xs-12 col-sm-12 col-md-12 col-lg-12 no-padding">
-  <interactive-graph check="{[ check.uuid ]}" domain="{[ domain.id ]}" variables="{[ variables ]}" graph-state="graphstate" ></interactive-graph>
+  <graph check="check" domain="domain" variables="variables" graph-state="graphstate" ></graph>
   <table class="table">
     <thead>
       <tr>
