--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,7 @@
     <script type="text/javascript" src="/static/scripts/DomainCtrl.js"></script>
     <script type="text/javascript" src="/static/scripts/NodeCtrl.js"></script>
     <script type="text/javascript" src="/static/scripts/NodeCheckCtrl.js"></script>
+    <script type="text/javascript" src="/static/scripts/GraphDirective.js"></script>
     <script type="text/javascript" src="/static/statistics.js"></script>
   </head>
   <body>
