--- a/templates/base.html
+++ b/templates/base.html
@@ -19,9 +19,11 @@
     <script type="text/javascript" src="/static/bower_components/jquery-flot/jquery.flot.threshold.js"></script>
     <script type="text/javascript" src="/static/bower_components/angular-flot/angular-flot.js"></script>
     <script type="text/javascript" src="/static/bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>
+    <script type="text/javascript" src="/static/bower_components/angular-gravatar/build/angular-gravatar.js"></script>
     <script type="text/javascript" src="/static/ng.app.js"></script>
     <script type="text/javascript" src="/static/ng.zoomable.js"></script>
     <script type="text/javascript" src="/static/interactiveGraph.js"></script>
+    <script type="text/javascript" src="/static/scripts/ProfileCtrl.js"></script>
     <script type="text/javascript" src="/static/scripts/SearchCtrl.js"></script>
     <script type="text/javascript" src="/static/scripts/DomainCtrl.js"></script>
     <script type="text/javascript" src="/static/scripts/NodeCtrl.js"></script>
@@ -43,7 +45,7 @@
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
             {% if not user.is_anonymous %}
-            <li><a href="{% url 'monitoring.views.profile' %}">{{ user }}</a></li>
+            <li><a href="#" ui-sref="profile">{{ user }}</a></li>
             <li><a href="#" ui-sref="tree">Hosts</a></li>
             <li><a href="#" ui-sref="search" searchbox>Search</a></li>
             <li><a href="{% url 'django.contrib.auth.views.logout' %}">Logout</a></li>
