--- a/templates/base.html
+++ b/templates/base.html
@@ -39,11 +39,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Fluxmon</a>
+          <a class="navbar-brand" href="#" ui-sref="index">Fluxmon</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
+            <li><a href="#" ui-sref="index">Home</a></li>
             {% if not user.is_anonymous %}
             <li><a href="#" ui-sref="profile">{{ user }}</a></li>
             <li><a href="#" ui-sref="tree">Hosts</a></li>
