move statistics.js to scripts/StatisticsService.js

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
     <script type="text/javascript" src="/static/scripts/DomainCtrl.js"></script>
     <script type="text/javascript" src="/static/scripts/NodeCtrl.js"></script>
     <script type="text/javascript" src="/static/scripts/GraphDirective.js"></script>
-    <script type="text/javascript" src="/static/statistics.js"></script>
+    <script type="text/javascript" src="/static/scripts/StatisticsService.js"></script>
   </head>
   <body>
     <div class="navbar navbar-default navbar-static-top">
