--- a/static/templates/node-check.html
+++ b/static/templates/node-check.html
@@ -1,6 +1,6 @@
 <dl class="dl-horizontal">
   <dt>Check:</dt>
-  <dd>{[ check.uuid ]}</dd>
+  <dd>{[ check.display || check.uuid ]}</dd>
   <dt>Sensor:</dt>
   <dd>{[ check.sensor.name ]}</dd>
   <dt>Executed on host:</dt>
