--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="/static/bower_components/angular-flot/angular-flot.js"></script>
     <script type="text/javascript" src="/static/bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>
     <script type="text/javascript" src="/static/bower_components/angular-gravatar/build/angular-gravatar.js"></script>
+    <script type="text/javascript" src="/static/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/static/ng.app.js"></script>
     <script type="text/javascript" src="/static/scripts/ProfileCtrl.js"></script>
     <script type="text/javascript" src="/static/scripts/SearchCtrl.js"></script>
@@ -80,8 +81,6 @@
       <div class="container">
       </div>
     </div>
-
-    <script src="/static/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
 {# kate: space-indent on; indent-width 2; replace-tabs on; hl Django HTML Template; #}
