--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
     <script type="text/javascript" src="/static/bower_components/angular-gravatar/build/angular-gravatar.js"></script>
     <script type="text/javascript" src="/static/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/static/ng.app.js"></script>
+    <script type="text/javascript" src="/static/scripts/IndexCtrl.js"></script>
     <script type="text/javascript" src="/static/scripts/ProfileCtrl.js"></script>
     <script type="text/javascript" src="/static/scripts/SearchCtrl.js"></script>
     <script type="text/javascript" src="/static/scripts/DomainCtrl.js"></script>
@@ -59,7 +60,7 @@
     </div>
 
     <!-- Begin page content -->
-    <div class="container" ng-show="showIndex()">
+    <div class="container" ng-show="showIndex()" ng-controller="IndexCtrl">
       <div class="panel panel-warning" ng-hide="true">
         <div class="panel-heading">
           <h3 class="panel-title">Please enable JavaScript</h3>
