--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
     <script type="text/javascript" src="/static/scripts/SearchCtrl.js"></script>
     <script type="text/javascript" src="/static/scripts/DomainCtrl.js"></script>
     <script type="text/javascript" src="/static/scripts/NodeCtrl.js"></script>
+    <script type="text/javascript" src="/static/scripts/TokenCtrl.js"></script>
     <script type="text/javascript" src="/static/scripts/GraphDirective.js"></script>
     <script type="text/javascript" src="/static/scripts/StatisticsService.js"></script>
   </head>
